--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <input type="submit" value="L o g i n" />
           <div class="switch" onclick="showsignup();">New User ? Sign Up</div>
           <div class="signupbox boxinner" id="signupbox">
-            <section class="authbox title">
+            <section class="authbox2 title">
               S I G N U P
             </section>
             <form>
